--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.9.3",
+    "axios": "^1.5.1",
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "react-input-mask": "^2.0.4",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "autoprefixer": "latest",
